# Majin

./: .gitignore  CMakeLists.txt  LICENSE  a.out  test.c  valgrind-out.txt
blog/: notes.md
lib/: dynarray.h  epoll.h  hash.h  llist.h  mem.h  mmath.h  server.h  ssocket.h  sstring.h  tree.h  tthread.h
src/: a.out  dynarray.c  epoll  epoll.c  hash.c  llist.c  main.c  mem.c  mmath.c  poll2.c  ppoll.c  read  server.c  ssignal.c  ssocket.c  sstring.c  test.c  tree.c  tthread.c  write
src/examples/: poll2.c  reader.c  writer.c
src/server/: server.c  server_listener.c  server_reader.c  server_writer.c
test/: check-leaks.rb  valgrind-out.txt
